apps/overlays/dev/billing-proj/billing-rmq/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-rmq
spec:
  template:
    spec:
      containers:
      - name: billing-rmq
        image: rabbitmq:4.2.4
