apps/overlays/dev/billing-proj/billing-rmq/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-rmq
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "billing-rmq.dev.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: billing-rmq
            port:
              number: 80
